[tool.poetry]
name = "quart-auth"
version = "0.4.0"
description = "A Quart extension to provide secure cookie authentication"
authors = ["pgjones <philip.graham.jones@googlemail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["src/quart_auth/py.typed"]
license = "MIT"
readme = "README.rst"
repository = "https://gitlab.com/pgjones/quart-auth/"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "quart_auth, tests"
known_third_party = "_pytest, itsdangerous, pytest, quart"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.poetry.dependencies]
python = ">=3.7"
quart = ">=0.13"

[tool.poetry.dev-dependencies]
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
